@@ -47,6 +47,8 @@ import org.apache.lucene.internal.vectorization.VectorizationProvider;
  */
 public final class VectorUtil {
 
+  private static final float EPSILON = 1e-4f;
+
   private static final VectorUtilSupport IMPL =
       VectorizationProvider.getInstance().getVectorUtilSupport();
 
@@ -121,6 +123,11 @@ public final class VectorUtil {
     return v;
   }
 
+  public static boolean isUnitVector(float[] v) {
+    double l1norm = IMPL.dotProduct(v, v);
+    return Math.abs(l1norm - 1.0d) <= EPSILON;
+  }
+
   /**
    * Modifies the argument to be unit length, dividing by its l2-norm.
    *
@@ -138,7 +145,7 @@ public final class VectorUtil {
         return v;
       }
     }
-    if (Math.abs(l1norm - 1.0d) <= 1e-5) {
+    if (Math.abs(l1norm - 1.0d) <= EPSILON) {
       return v;
     }
     int dim = v.length;
